classifier/shell_scripts/Error_12017075.err
Loaded module: cuda/11.0
  File "/dtu-compute/ADNIbias/AlzPred_Oskar_Anders/git_code/AlzPred/classifier/src/train_classifier.py", line 102
    print(f'Epoch: {epoch} Training Loss: {} Validation Loss {} Training Accuracy {} Validation Accuracy {}')
                                                                                                            ^
SyntaxError: f-string: empty expression not allowed
